--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "dynamic-list",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "peerDependencies": {
     "@angular/common": "^16.2.0",
     "@angular/core": "^16.2.0"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",    
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3"    
   },
   "sideEffects": false,
   "module": "fesm2022/dynamic-list.mjs",
