--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dynamic-list",
+  "name": "dynamic-list-page",
   "version": "1.0.1",
   "peerDependencies": {
     "@angular/common": "^16.2.0",
